// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PDPSlider should render with price and names 1`] = `
<PDPSlider
  config={
    Object {
      "headline": "mockedHeadline",
      "showName": true,
      "showPrice": true,
      "type": "mockedType",
    }
  }
  productId="mockedProductId"
>
  <Slider
    headline="mockedHeadline"
    productId="mockedProductId"
    showName={true}
    showPrice={true}
    titleRows={2}
    type="mockedType"
  />
</PDPSlider>
`;

exports[`PDPSlider should render without price and names as default 1`] = `
<PDPSlider
  config={
    Object {
      "headline": "mockedHeadline",
      "showName": null,
      "showPrice": null,
      "type": "mockedType",
    }
  }
  productId="mockedProductId"
>
  <Slider
    headline="mockedHeadline"
    productId="mockedProductId"
    showName={false}
    showPrice={false}
    titleRows={2}
    type="mockedType"
  />
</PDPSlider>
`;
